// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1: Component should render children when passed in 1`] = `
<h1
  style={
    Object {
      "fontFamily": "Inter, Arial, Helvetica, sans-serif",
      "fontSize": "24px",
      "fontWeight": 600,
    }
  }
>
  Super title
</h1>
`;

exports[`H1: Component should render correctly 1`] = `
<h1
  style={
    Object {
      "fontFamily": "Inter, Arial, Helvetica, sans-serif",
      "fontSize": "24px",
      "fontWeight": 600,
    }
  }
/>
`;

exports[`H1: Component should render with custom styles 1`] = `
<h1
  style={
    Object {
      "color": "blue",
      "fontFamily": "Inter, Arial, Helvetica, sans-serif",
      "fontSize": "24px",
      "fontWeight": 600,
    }
  }
>
  Blue title
</h1>
`;
